bitfield/tests/11-bits-attribute-wrong.stderr
error[E0277]: the trait bound `[(); 1]: TypeEq<[(); 9]>` is not satisfied
  --> tests/11-bits-attribute-wrong.rs:11:14
   |
11 |     #[bits = 9]
   |              ^ the trait `TypeEq<[(); 9]>` is not implemented for `[(); 1]`
   |
   = help: see issue #48214
